# CGCookieDownloader

./: .gitignore  README.md  cli_downloader.py  config.yaml  pyproject.toml  requirements.txt
cgcookie_downloader/: manage.py
cgcookie_downloader/cgcookie_downloader/: asgi.py  settings.py  wsgi.py
cgcookie_downloader/downloader/: consumers.py  utils.py  views.py
cgcookie_downloader/downloader/templates/: index.html
