[tool.poetry]
name = "cgcookiedownloader"
version = "0.1.0"
description = ""
authors = ["BedirT <bedirtpkn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
selenium = "^4.20.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pyautogui = "^0.9.54"
tqdm = "^4.66.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
